--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <section class="services">
             <div class="container">
                 <h2 class="site-title">Deation &amp;&nbsp;Evaluation&nbsp;&mdash; Best Way to&nbsp;Kick off Your Product Idea</h2>
-                <ul class="services-list">
+                <ul class="services-list list-reset" >
                     <li class="services-item">
                         <h3 class="services-subtitle">Product Design Sprint</h3>
                         <p class="services-descr">A&nbsp;five-day workshop that will help you answer crucial business questions</p>
@@ -86,7 +86,7 @@
             <div class="footer-midle">
                 <div class="footer-column">
                     <h3 class="footer-titile">Services</h3>
-                    <ul class="footer-list">
+                    <ul class="footer-list list-reset">
                         <li class="footer item"><a href="#" class="footer-link">Strategy Design</a></li>
                         <li class="footer item"><a href="#" class="footer-link">Product Design</a></li>
                         <li class="footer item"><a href="#" class="footer-link">Content Strategy</a></li>
@@ -96,7 +96,7 @@
                 </div>
                 <div class="footer-column">
                     <h3 class="footer-titile">Help And Advice</h3>
-                    <ul class="footer-list">
+                    <ul class="footer-list list-reset">
                         <li class="footer item"><a href="#" class="footer-link">How it works</a></li>
                         <li class="footer item"><a href="#" class="footer-link">Contact Support</a></li>
                         <li class="footer item"><a href="#" class="footer-link">Privacy Policy</a></li>
@@ -105,7 +105,7 @@
                 </div>
                 <div class="footer-column">
                     <h3 class="footer-titile">Company</h3>
-                    <ul class="footer-list">
+                    <ul class="footer-list list-reset">
                         <li class="footer item"><a href="#" class="footer-link">About</a></li>
                         <li class="footer item"><a href="#" class="footer-link">Blogt</a></li>
                         <li class="footer item"><a href="#" class="footer-link">Contact</a></li>
@@ -116,7 +116,7 @@
                     <h3 class="footer-titile">Get in touch</h3>
                     <p class="footer-text">Feel free to&nbsp;get in&nbsp;touch with&nbsp;us vai email</p>
                     <a href="mailto:info.webovio@gmail.com" class="footer-mail">info.webovio@gmail.com</a>
-                    <ul class="social">
+                    <ul class="social list-reset">
                         <li class="social-item"><a href="" class="social link social-link-fb" target="_blank" aria-label="Link to Facebook"></a></li>
                         <li class="social-item"><a href="" class="social link social-link-tw" target="_blank" aria-label="Link to Twitter"></a></li>
                         <li class="social-item"><a href="" class="social link social-link-g" target="_blank" aria-label="Link to Google+"></a></li>
