--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <header class="header">
         <div class="container">
             <a class="logo">
-                <img src="#" alt="Webovio Logo">
+                <img src="/images/logo.svg" alt="Webovio Logo">
             </a>
-            <button class="burger" aria-label="Open menu">
+            <button class="burger btn-reset" aria-label="Open menu">
                 <span class="burger-line"></span>
                 <span class="burger-line"></span>
                 <span class="burger-line"></span>
